[gd_scene load_steps=7 format=2]

[ext_resource path="res://GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Andale Mono.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Quack_duck.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/MainTheme.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 171.0
margin_top = 547.0
margin_right = 549.0
margin_bottom = 733.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 378.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 378.0
margin_bottom = 140.0
custom_fonts/font = SubResource( 2 )
text = "Restart"

[node name="SoundOnOff" type="CheckButton" parent="CenterContainer/VBoxContainer"]
margin_top = 150.0
margin_right = 378.0
margin_bottom = 186.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
[connection signal="pressed" from="CenterContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="CenterContainer/VBoxContainer/SoundOnOff" to="." method="_on_SoundOnOff_toggled"]
